# tiny-renderer-experiments

./: CMakeLists.txt  LICENSE  README.md  main.c
rasterizer/: CMakeLists.txt  README.md
rasterizer/lesson1/: CMakeLists.txt
rasterizer/lesson1/src/: main.c
rasterizer/lesson2/: CMakeLists.txt
rasterizer/lesson2/src/: main.c
rasterizer/lesson3/: CMakeLists.txt
rasterizer/lesson3/src/: main.c  stb_image.h
rasterizer/lesson4/: CMakeLists.txt
rasterizer/lesson4/src/: main.c
rasterizer/lesson5/: CMakeLists.txt
rasterizer/lesson5/src/: main.c
rasterizer/lesson6/: CMakeLists.txt
rasterizer/lesson6/src/: main.c
rasterizer/lesson7/: CMakeLists.txt
rasterizer/lesson7/src/: main.c
rasterizer/lesson8/: CMakeLists.txt
rasterizer/lesson8/src/: main.c
rasterizer/lesson9/: CMakeLists.txt
rasterizer/lesson9/src/: main.c
raytracer/: CMakeLists.txt  README.md
raytracer/part1/: CMakeLists.txt
raytracer/part1/src/: main.c
raytracer/part2/: CMakeLists.txt
raytracer/part2/src/: main.c
